# exam3

./: CMakeLists.txt  CMakeSettings.json  README.md
lib/: sfml-audio.exp  sfml-graphics.exp  sfml-network.exp  sfml-system.exp  sfml-window.exp
src/: game_logic.cpp  game_logic.h  main.cpp
